Stats page: chart alignment, fixes for surveys with no questions.

--- a/src/main/webapp/resources/pages/surveys/statistics.less
+++ b/src/main/webapp/resources/pages/surveys/statistics.less
@@ -39,3 +39,7 @@
 .jqplot-table-legend {
   z-index: 9999;
 }
+
+.question_details > tbody > tr > td {
+  vertical-align: top;
+}
